Simplified folder structure and added a Makefile

--- a/handouts/day-1.tex
+++ b/handouts/day-1.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\input{../style.tex}
+\input{./style.tex}
 \title{Introduction path integral \\molecular dynamics using \ipi{}}
 \author{Venkat Kapil, Bingqing Cheng}
 \date{June 2016}
