--- a/handouts/day-2.tex
+++ b/handouts/day-2.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \newcommand{\vk}[1]{{\color{blue}{#1}}}
 
-\input{../style.tex}
+\input{./style.tex}
 \title{Advanced Path Integral Methods in a \\ Simulation of Water Across 
   its Phase Diagram}
 \author{Michele Ceriotti}
