--- a/handouts/day-3.tex
+++ b/handouts/day-3.tex
@@ -16,7 +16,7 @@
 In this exercise we will perform
 simulations of Ice Ih at 200 K,
 using a simple empirical force field model based
-on TIP4P-like point charges {\bf CHANGE FOR MBPOL?}. We will use this model to look
+on TIP4P-like point charges. We will use this model to look
 at different path integral approximations to real time correlations, calculate imaginary
 time correlations from PI, and look at the relationship between them. The ice box contains 96 water molecules.
 All files necessary for the exercises below can be found in the \texttt{day-3} folder.
