--- a/handouts/day-3.tex
+++ b/handouts/day-3.tex
@@ -128,7 +128,7 @@ $ cd dir_${number}
 $ cp ../../lammps_inputs/* .
 $ i-pi input.xml &> log.ipi &
 $ what=$(grep addr input.xml | sed "s/.*<address>//; s/<\/address>//")
-$ for i in `seq 1 8`; do sed "s/addr/$what/" in.tip4pf | lammps &> log.$i & done
+$ for i in `seq 1 8`; do sed "s/addr/$what/" in.tip4pf | lmp_ubuntu &> log.$i & done
 \end{lstlisting}
 
 
