--- a/handouts/day-1.tex
+++ b/handouts/day-1.tex
@@ -50,7 +50,7 @@ The time domain can then be discretized into small  and finite time steps with l
 The key processes of a molecular dynamics run are illustrated in the flowchart below.
 \begin{figure}[h]
     \begin{center}
-    \includegraphics[width=0.25\textwidth]{mdchart.jpg}
+    \includegraphics[width=0.25\textwidth]{mdchart.pdf}
     \end{center}
 \end{figure}
 At the initialization stage, the program is informed about some basic information about the system,
@@ -239,7 +239,7 @@ contents of a class object, or the value of a variable. Finally tags can have at
 which are used to specify how the tag should be interpreted.
 A xml tag has the following syntax:
 \begin{lstlisting}[language=xml]
-<tag_name attribute_name=Õattribute_dataÕ>tag_data</tag_name>
+<tag_name attribute_name=Ã•attribute_dataÃ•>tag_data</tag_name>
 \end{lstlisting}
 For example, in the tag
 \begin{lstlisting}[language=xml]
