Made mdchart follow more clearly the analogy with i-pi scheme

--- a/handouts/biblio.bib
+++ b/handouts/biblio.bib
@@ -15510,3 +15510,10 @@ title = {{Bulk liquid water at ambient temperature and pressure from mp2 theory}
 volume = {4},
 year = {2013}
 }
+
+@article{kapi+16,
+     author = { Kapil, V. and Behler, J. and Ceriotti, M.},
+     title = { High Order Path Integrals Made Easy: A Precise Assessment of Nuclear Quantum Effects in Liquid Water and its Isotopomers},
+     archivePrefix = "arXiv",
+     eprint        = "0707.3168",
+}
