changed the name of cp2k executable to the one on the usb key.

--- a/handouts/day-1.tex
+++ b/handouts/day-1.tex
@@ -421,7 +421,7 @@ Move to the directory \url{ex-4/} and carefully observe the\ipi{} input files \u
 
 \begin{lstlisting}[language=bash]
 $ i-pi input.xml &> log.ipi &
-$ cp2k_serial < in.cp2k &> log.cp2k &
+$ cp2k.popt < in.cp2k &> log.cp2k &
 \end{lstlisting}
 
 \Question
